--- a/android.html
+++ b/android.html
@@ -86,7 +86,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/lucassantosfe" target="_blank">Lucas Santos</a></p>
     </footer>
 </body>
 </html>
